src/prime-number-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prime
spec:
  selector:
    app: prime
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
